# p2p-file-share

./: package-lock.json  package.json
iroh-wrapper/: Cargo.toml
iroh-wrapper/src/: js_anyhow.rs  lib.rs  webrtc.rs
src/app/: layout.tsx  page.tsx
