[package]
name = "iroh-wrapper"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
iroh = "0.91.2"
js-sys = "0.3.80"
tokio = { version = "1.47.1", features = ["io-util"] }
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = { version = "0.3.80", features = ["Event", "RtcConfiguration", "RtcDataChannel", "RtcDataChannelEvent", "RtcIceCandidate", "RtcIceCandidateInit", "RtcIceGatheringState", "RtcIceServer", "RtcPeerConnection", "RtcPeerConnectionIceEvent", "RtcSessionDescription", "RtcSessionDescriptionInit", "console"] }
